--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name" : "http-redirect",
-  "version" : "0.0.6",
+  "version" : "0.0.7",
   "engines" : { 
     "node" : ">=0.10.0" 
   },
@@ -9,7 +9,7 @@
     "proxy"
   ],
   "dependencies" : {
-    "form-urlencoded" : "*"
+    "form-urlencoded" : "^1.5.0"
   },
   "scripts" : {
     "start" : "node scripts/start.js"
